force-app/main/default/objects/License__c/fields/AccountFEIN__c.field-meta.xml
<CustomField>
    <fullName>AccountFEIN__c</fullName>
    <formula>Licensee__r.FEIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Licensee&apos;s Federal Tax ID. To update this field, please go to the Licensee record.</inlineHelpText>
    <label>FEIN</label>
    <type>Text</type>
</CustomField>