force-app/main/default/objects/License__c/fields/AccountStateExciseTaxNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountStateExciseTaxNumber__c</fullName>
    <formula>Licensee__r.StateExciseTaxNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Licensee&apos;s State Tax Id. To update this field, please go to the Licensee record.</inlineHelpText>
    <label>State Excise Tax Number</label>
    <type>Text</type>
</CustomField>