force-app/main/default/objects/License__c/fields/ActiveInactiveFormula__c.field-meta.xml
<CustomField>
    <fullName>ActiveInactiveFormula__c</fullName>
    <formula>IF(ISPICKVAL(ActiveInactive__c, &quot;Inactive&quot;), &quot;Inactive&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Inactive Formula</label>
    <type>Text</type>
</CustomField>