force-app/main/default/objects/License__c/fields/AddClass__c.field-meta.xml
<CustomField>
    <fullName>AddClass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV082919 - Created for PVL phase 1</description>
    <inlineHelpText>Please confirm you would like to create an application for a new classification</inlineHelpText>
    <label>Add Class</label>
    <type>Checkbox</type>
</CustomField>