force-app/main/default/objects/License__c/fields/AddPrivilege__c.field-meta.xml
<CustomField>
    <fullName>AddPrivilege__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint: RdG 7528 - For PVL Phase 1 - Create an application record when the flag &quot;Add Privilege&quot; is set. The Application record will have the Type= &quot;ADDP - Additional Privilege&quot; &amp; Phase=&quot;A&quot;</description>
    <label>Add Privilege</label>
    <type>Checkbox</type>
</CustomField>