force-app/main/default/objects/License__c/fields/ALIASModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ALIASModifiedDate__c</fullName>
    <label>ALIAS Modified Date</label>
    <type>Date</type>
</CustomField>