force-app/main/default/objects/License__c/fields/AnnualReportDue__c.field-meta.xml
<CustomField>
    <fullName>AnnualReportDue__c</fullName>
    <description>PacPoint-DN06012020</description>
    <label>Annual Report Due</label>
    <type>Date</type>
</CustomField>