force-app/main/default/objects/License__c/fields/AnnualReportReceived__c.field-meta.xml
<CustomField>
    <fullName>AnnualReportReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-DN06012020-Created for PVL Sprint 4 Phase 1</description>
    <label>Annual Report Received</label>
    <type>Checkbox</type>
</CustomField>