force-app/main/default/objects/License__c/fields/ApplicationEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEffectiveDate__c</fullName>
    <label>Application Effective Date</label>
    <type>Date</type>
</CustomField>