force-app/main/default/objects/License__c/fields/ApprenticeTrainingHours__c.field-meta.xml
<CustomField>
    <fullName>ApprenticeTrainingHours__c</fullName>
    <description>Pac Point-DN010820 - Created for PVL Sprint 3 Phase 1</description>
    <inlineHelpText>The amount of training hours for Apprentices. This is the field for the required hours.</inlineHelpText>
    <label>Apprentice Training Hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>