force-app/main/default/objects/License__c/fields/ApprovedCurriculum__c.field-meta.xml
<CustomField>
    <fullName>ApprovedCurriculum__c</fullName>
    <description>PacPoint-KN102219-Created for PVL Sprint 2 Phase 1</description>
    <label>Approved Curriculum</label>
    <type>TextArea</type>
</CustomField>