force-app/main/default/objects/License__c/fields/AssociatedLicenseNonRenewalCount__c.field-meta.xml
<CustomField>
    <fullName>AssociatedLicenseNonRenewalCount__c</fullName>
    <inlineHelpText>Displays all Associated Employees who have not Renewed.</inlineHelpText>
    <label>Associated License Non Renewal Count</label>
    <summaryFilterItems>
        <field>AssociatedLicense__c.EmploymentStatus__c</field>
        <operation>equals</operation>
        <value>Employed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AssociatedLicense__c.EndDate__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AssociatedLicense__c.ThisLicenseRenewed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AssociatedLicense__c.ExcludefromRenewalRollup__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>AssociatedLicense__c.EntityLicense__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>