force-app/main/default/objects/License__c/fields/AuditCERequirement__c.field-meta.xml
<CustomField>
    <fullName>AuditCERequirement__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>Audit CE Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full (Proof of All CE is Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>