force-app/main/default/objects/License__c/fields/AuditDate__c.field-meta.xml
<CustomField>
    <fullName>AuditDate__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>The date on which the License was flagged for Audit.</inlineHelpText>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>