force-app/main/default/objects/License__c/fields/AuditNumber__c.field-meta.xml
<CustomField>
    <fullName>AuditNumber__c</fullName>
    <description>PacPoint FT011420 - Created for PVL</description>
    <label>Audit Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>