force-app/main/default/objects/License__c/fields/AvailableForClearInAudit__c.field-meta.xml
<CustomField>
    <fullName>AvailableForClearInAudit__c</fullName>
    <description>Criteria when LicenseType.Name = CPA:
(License.AuditDate__c within LicenseType.PreviousLicensePeriodEffectiveDate__c - LicenseType.PreviousLicensePeriodExpireDate__c) 
Criteria when LicenseType.Name &lt;&gt; CPA:
License.LicenseType__c = License type that triggered the job</description>
    <formula>If((LicenseType__r.Name == &apos;CPA&apos; &amp;&amp;
 AuditDate__c &gt;= LicenseType__r.PreviousLicensePeriodEffectiveDate__c 
   &amp;&amp; AuditDate__c &lt;=  LicenseType__r.PreviousLicensePeriodExpireDate__c ) ||  LicenseType__r.Name != &apos;CPA&apos;, true, false)</formula>
    <label>Available For Clear In Audit</label>
    <type>Checkbox</type>
</CustomField>