force-app/main/default/objects/License__c/fields/AwaitingRenewal__c.field-meta.xml
<CustomField>
    <fullName>AwaitingRenewal__c</fullName>
    <formula>IF(
OR(
 TEXT(Status__c) = &quot;R - Valid Thru Expiration Date, Subject To Renewal&quot;,
 TEXT(Status__c) = &quot;RM - Valid Thru Exp Date, Subject To Renwl/Maint Reqmt Due&quot;)
, 
true, 
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awaiting Renewal</label>
    <type>Checkbox</type>
</CustomField>