force-app/main/default/objects/License__c/fields/BienniumYear__c.field-meta.xml
<CustomField>
    <fullName>BienniumYear__c</fullName>
    <description>PacPoint-KN08312020-Created for PVL CE and INS Portal</description>
    <formula>TEXT(YEAR(EffectiveExpireDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current biennium that the license is in.</inlineHelpText>
    <label>Biennium Year</label>
    <type>Text</type>
</CustomField>