force-app/main/default/objects/License__c/fields/BoardProgramName__c.field-meta.xml
<CustomField>
    <fullName>BoardProgramName__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>LicenseType__r.BoardProgram__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Program Name</label>
    <type>Text</type>
</CustomField>