force-app/main/default/objects/License__c/fields/BondAmount__c.field-meta.xml
<CustomField>
    <fullName>BondAmount__c</fullName>
    <description>PacPoint-FT021820- Created for PVL phase 1</description>
    <label>Bond Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>