force-app/main/default/objects/License__c/fields/BondInsuranceTermDate__c.field-meta.xml
<CustomField>
    <fullName>BondInsuranceTermDate__c</fullName>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <label>Bond / Insurance Term Date</label>
    <type>Date</type>
</CustomField>