force-app/main/default/objects/License__c/fields/BondWaiver__c.field-meta.xml
<CustomField>
    <fullName>BondWaiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN05112020 (Case 5228) - PVL Phase 1 Sprint 3</description>
    <inlineHelpText>This field will be checked for those that are eligible for bond waiver after a WBOND application is completed.</inlineHelpText>
    <label>Bond Waiver</label>
    <type>Checkbox</type>
</CustomField>