force-app/main/default/objects/License__c/fields/BouncedCheckAmountDue__c.field-meta.xml
<CustomField>
    <fullName>BouncedCheckAmountDue__c</fullName>
    <label>Bounced Check Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>