force-app/main/default/objects/License__c/fields/BouncedCheckDueDate__c.field-meta.xml
<CustomField>
    <fullName>BouncedCheckDueDate__c</fullName>
    <label>Bounced Check Due Date</label>
    <type>Date</type>
</CustomField>