force-app/main/default/objects/License__c/fields/BoundMaterial__c.field-meta.xml
<CustomField>
    <fullName>BoundMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN12172020-Created for PVL Phase 1</description>
    <label>Bound Material</label>
    <type>Checkbox</type>
</CustomField>