force-app/main/default/objects/License__c/fields/BoundMaterialFormula__c.field-meta.xml
<CustomField>
    <fullName>BoundMaterialFormula__c</fullName>
    <description>PacPoint KN12172020</description>
    <formula>If( BoundMaterial__c  , &apos;&lt;span style=&quot;font-size: 10pt;&quot;&gt;&lt;u&gt;x&lt;/u&gt;&lt;/span&gt;&apos;, &apos;&lt;span style=&quot;font-size: 10pt;&quot;&gt;&amp;nbsp;&lt;/span&gt;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bound Material Formula</label>
    <type>Text</type>
</CustomField>