force-app/main/default/objects/License__c/fields/BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>BranchNumber__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Branch Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>