force-app/main/default/objects/License__c/fields/BranchNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>BranchNumberFormula__c</fullName>
    <formula>VALUE(
If(
FIND(&apos;-&apos;, RIGHT(Name, (LEN(Name)  - FIND(&quot;-&quot;, Name)))) == 0, &apos;&apos;, 
RIGHT( RIGHT(Name, (LEN(Name)  - FIND(&quot;-&quot;, Name))), (LEN(RIGHT(Name, (LEN(Name)  - FIND(&quot;-&quot;, Name)))) - FIND(&apos;-&apos;, RIGHT(Name, (LEN(Name)  - FIND(&quot;-&quot;, Name))))))

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>