force-app/main/default/objects/License__c/fields/Business_Address_Update_from_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Update_from_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PP M/S 8/7; created to help distinguish updates to Business Address during application update</description>
    <label>Business Address Update from Renewal</label>
    <type>Checkbox</type>
</CustomField>