force-app/main/default/objects/License__c/fields/BusinessAddressEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>BusinessAddressEffectiveDate__c</fullName>
    <description>PacPoint-KN102819-Created for PVL Sprint 2 Phase 1</description>
    <label>Business Address Effective Date</label>
    <type>Date</type>
</CustomField>