force-app/main/default/objects/License__c/fields/BusinessAddressRestricted__c.field-meta.xml
<CustomField>
    <fullName>BusinessAddressRestricted__c</fullName>
    <description>PacPoint-FT021820- Created for PVL phase 1</description>
    <label>Business Address Restricted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - County Allowing Use Of Address For Only Certain Purposes</fullName>
            </value>
            <value>
                <fullName>R - Postal Service Address(Rico Investigating Oahu)</fullName>
            </value>
            <value>
                <fullName>T - County Imposed An Expiration Date On Address.</fullName>
            </value>
            <value>
                <fullName>Z - Zoning(Island Res Addr Allowed For Business No Employees)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>