force-app/main/default/objects/License__c/fields/BusinessCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessCode__c</fullName>
    <label>Business Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>