force-app/main/default/objects/License__c/fields/BusinessIsland__c.field-meta.xml
<CustomField>
    <fullName>BusinessIsland__c</fullName>
    <label>Business Island</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii Island</fullName>
            </value>
            <value>
                <fullName>Kauai</fullName>
            </value>
            <value>
                <fullName>Lanai</fullName>
            </value>
            <value>
                <fullName>Maui</fullName>
            </value>
            <value>
                <fullName>Molokai</fullName>
            </value>
            <value>
                <fullName>Oahu</fullName>
            </value>
            <value>
                <fullName>Mainland / Domestic / US Territories</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>