force-app/main/default/objects/License__c/fields/BusinessState__c.field-meta.xml
<CustomField>
    <fullName>BusinessState__c</fullName>
    <defaultValue>&quot;Hawaii&quot;</defaultValue>
    <description>PacPoint-KN101819-Created for PVL Sprint 2 Phase 1</description>
    <label>Business State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USStates</valueSetName>
    </valueSet>
</CustomField>