force-app/main/default/objects/License__c/fields/BusinessStreet__c.field-meta.xml
<CustomField>
    <fullName>BusinessStreet__c</fullName>
    <description>PacPoint-KN101819-Created for PVL Sprint 2 Phase 1</description>
    <label>Business Street</label>
    <type>TextArea</type>
</CustomField>