force-app/main/default/objects/License__c/fields/BypassLicenseHistoryCreation__c.field-meta.xml
<CustomField>
    <fullName>BypassLicenseHistoryCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass License History Creation</label>
    <type>Checkbox</type>
</CustomField>