force-app/main/default/objects/License__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <description>PacPoint - KN12222020 - Created for PVL Phase 1</description>
    <inlineHelpText>This field is used to populate License History.</inlineHelpText>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>