force-app/main/default/objects/License__c/fields/CEisConfirmed__c.field-meta.xml
<CustomField>
    <fullName>CEisConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>Indicates that the Continuing Education Requirement has been confirmed for this License.  This is set to blank at the start of each renewal period.</inlineHelpText>
    <label>CE is Confirmed</label>
    <type>Checkbox</type>
</CustomField>