force-app/main/default/objects/License__c/fields/CERequirement__c.field-meta.xml
<CustomField>
    <fullName>CERequirement__c</fullName>
    <formula>IF(
NOT(ISBLANK(TEXT(LicenseType__r.AuditType__c))),
IF(
OR(
AND(
TEXT(LicenseType__r.AuditType__c) = &quot;Pre-Audit&quot;,
TEXT(LicenseType__r.PartialCERequirement__c) = &quot;Licensed in 1st half of Biennium Requires Partial CE (1SB)&quot;,
OriginalDateofLicensure__c &gt;= LicenseType__r.FirstYearStart__c,
OriginalDateofLicensure__c &lt; LicenseType__r.SecondYearStart__c
),
AND(
TEXT(LicenseType__r.AuditType__c) = &quot;Pre-Audit&quot;,
TEXT(LicenseType__r.PartialCERequirement__c) = &quot;Licensed in the Current License Period Requires Partial CE (CUR)&quot;,
OriginalDateofLicensure__c &gt;= LicenseType__r.LicenseTypeEffectiveDate__c,
OriginalDateofLicensure__c &lt; LicenseType__r.LicenseTypeExpireDate__c
),
AND(
TEXT(LicenseType__r.AuditType__c) = &quot;Post-Audit&quot;,
TEXT(LicenseType__r.PartialCERequirement__c) = &quot;Licensed in 1st half of Biennium Requires Partial CE (1SB)&quot;,
OriginalDateofLicensure__c &gt;= LicenseType__r.PreviousFirstYearStart__c,
OriginalDateofLicensure__c &lt; LicenseType__r.PreviousSecondYearStart__c
),
AND(
TEXT(LicenseType__r.AuditType__c) = &quot;Post-Audit&quot;,
TEXT(LicenseType__r.PartialCERequirement__c) = &quot;Licensed in the Current License Period Requires Partial CE (CUR)&quot;,
OriginalDateofLicensure__c &gt;= LicenseType__r.PreviousLicensePeriodEffectiveDate__c,
OriginalDateofLicensure__c &lt;= LicenseType__r.PreviousLicensePeriodExpireDate__c
)
)
,
&quot;Partial&quot;,
&quot;Full (Proof of All CE is Required)&quot;
),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE Requirement</label>
    <type>Text</type>
</CustomField>