force-app/main/default/objects/License__c/fields/CertificateTypeRequested__c.field-meta.xml
<CustomField>
    <fullName>CertificateTypeRequested__c</fullName>
    <label>Certificate Type Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B - Pocket ID &amp; Wall certificate</fullName>
            </value>
            <value>
                <fullName>C - Wall certificate</fullName>
            </value>
            <value>
                <fullName>P - Pocket ID card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>