force-app/main/default/objects/License__c/fields/CheckoutFormConditional__c.field-meta.xml
<CustomField>
    <fullName>CheckoutFormConditional__c</fullName>
    <formula>IF(
 ConditionalLicense__c = true
,
&quot;Conditional&quot;
,
&quot;No Conditions&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkout Form Conditional</label>
    <type>Text</type>
</CustomField>