force-app/main/default/objects/License__c/fields/ClassNotEligibleforOnlineRenewal__c.field-meta.xml
<CustomField>
    <fullName>ClassNotEligibleforOnlineRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Class Not Eligible for Online Renewal</label>
    <type>Checkbox</type>
</CustomField>