force-app/main/default/objects/License__c/fields/ClassPrefix__c.field-meta.xml
<CustomField>
    <fullName>ClassPrefix__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <label>Class Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>