force-app/main/default/objects/License__c/fields/CompleteApplicationByDuration__c.field-meta.xml
<CustomField>
    <fullName>CompleteApplicationByDuration__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <label>Complete Application By Duration(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>