force-app/main/default/objects/License__c/fields/ConditionalLicense__c.field-meta.xml
<CustomField>
    <fullName>ConditionalLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <inlineHelpText>Indicates that there are conditions places on this license</inlineHelpText>
    <label>Conditional License</label>
    <type>Checkbox</type>
</CustomField>