force-app/main/default/objects/License__c/fields/ContinuingEducation__c.field-meta.xml
<CustomField>
    <fullName>ContinuingEducation__c</fullName>
    <description>PacPoint-KN082319-Created for PVL Phase 1</description>
    <label>Continuing Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - Continuing Education</fullName>
            </value>
            <value>
                <fullName>L - Law Degree</fullName>
            </value>
            <value>
                <fullName>M - Real Estate Major</fullName>
            </value>
            <value>
                <fullName>P - GRI or Professional</fullName>
            </value>
            <value>
                <fullName>R - Minimum Real Estate Course</fullName>
            </value>
            <value>
                <fullName>S - Salesman Course</fullName>
            </value>
            <value>
                <fullName>W - Continuing Education Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>