force-app/main/default/objects/License__c/fields/ConvertRBtoSoleOwner__c.field-meta.xml
<CustomField>
    <fullName>ConvertRBtoSoleOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint: RdG - Case 8545 - &apos;RB to Sole Owner Conversion&apos;</description>
    <label>Convert RB to Sole Owner</label>
    <type>Checkbox</type>
</CustomField>