force-app/main/default/objects/License__c/fields/ConvertSoletoRME__c.field-meta.xml
<CustomField>
    <fullName>ConvertSoletoRME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert Sole to RME</label>
    <type>Checkbox</type>
</CustomField>