force-app/main/default/objects/License__c/fields/ConverttoSoleOwner__c.field-meta.xml
<CustomField>
    <fullName>ConverttoSoleOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to Sole Owner</label>
    <type>Checkbox</type>
</CustomField>