force-app/main/default/objects/License__c/fields/CoreCreditsNeededThisPeriod__c.field-meta.xml
<CustomField>
    <fullName>CoreCreditsNeededThisPeriod__c</fullName>
    <formula>IF((CoreCreditsRequiredThisPeriod__c -  CoreCreditsThisLicensePeriod__c) &lt; 0, 0, (CoreCreditsRequiredThisPeriod__c -  CoreCreditsThisLicensePeriod__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Credits Needed - This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>