force-app/main/default/objects/License__c/fields/CoreCreditsPreviousLicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>CoreCreditsPreviousLicensePeriod__c</fullName>
    <label>Core Credits - Previous License Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>