force-app/main/default/objects/License__c/fields/CoreCreditsRequiredLastPeriod__c.field-meta.xml
<CustomField>
    <fullName>CoreCreditsRequiredLastPeriod__c</fullName>
    <formula>LicenseType__r.PreviousPeriodCoreCERequirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Credits Required - Last Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>