force-app/main/default/objects/License__c/fields/CoreCreditsRequiredThisPeriod__c.field-meta.xml
<CustomField>
    <fullName>CoreCreditsRequiredThisPeriod__c</fullName>
    <formula>IF(
 ExemptfromCE__c = true,
0,
LicenseType__r.CurrentPeriodCoreCERequirement__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Credits Required - This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>