force-app/main/default/objects/License__c/fields/CoreCreditsThisLicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>CoreCreditsThisLicensePeriod__c</fullName>
    <label>Core Credits - This License Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>