force-app/main/default/objects/License__c/fields/CountofActiveBonds__c.field-meta.xml
<CustomField>
    <fullName>CountofActiveBonds__c</fullName>
    <label>Count of Active Bonds</label>
    <summaryFilterItems>
        <field>InsuranceBond__c.Status__c</field>
        <operation>equals</operation>
        <value>Active, Waived</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>InsuranceBond__c.Type__c</field>
        <operation>equals</operation>
        <value>BD - Bond, BX - Bond Exemption (All Boards), LC - Line of Credit, EX - Exemption</value>
    </summaryFilterItems>
    <summaryForeignKey>InsuranceBond__c.License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>