force-app/main/default/objects/License__c/fields/CountofActiveWC__c.field-meta.xml
<CustomField>
    <fullName>CountofActiveWC__c</fullName>
    <label>Count of Active WC</label>
    <summaryFilterItems>
        <field>InsuranceBond__c.Status__c</field>
        <operation>equals</operation>
        <value>Active, Waived</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>InsuranceBond__c.Type__c</field>
        <operation>equals</operation>
        <value>SI - Exclusion from Workers Comp., SL - Self-Insured for W/C (Entity OK&apos;d By Labor Dept), SM - No HI Employees - Submit Workers Comp Prior to Hiring, SW - Workers Comp Thru Leasing Co., WC - Workers Compensation</value>
    </summaryFilterItems>
    <summaryForeignKey>InsuranceBond__c.License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>