force-app/main/default/objects/License__c/fields/CreateAssocLicenseDep1__c.field-meta.xml
<CustomField>
    <fullName>CreateAssocLicenseDep1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Associated License for Dependent License 1</description>
    <label>Create Assoc License for Dep 1</label>
    <type>Checkbox</type>
</CustomField>